hphp/test/zend/bad/ext/standard/tests/general_functions/bug44394.php
<?php

$string = "<a href='a?q=1'>asd</a>";

output_add_rewrite_var('a', 'b');

echo $string;

ob_flush();

ob_end_clean();

?>